# 3-semester

./: .travis.yml  README.md  appveyor.yml
labs/: README.md  appveyor.yml
labs/doxygen/: Doxyfile.conf
labs/doxygen/doc/html/: annotated.html  class_test-members.html  class_test.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  index.html  menudata.js  test_8h.html  test_8h_source.html
labs/doxygen/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  enums_0.js  enumvalues_0.js  functions_0.js  searchdata.js  variables_0.js
labs/doxygen/doc/latex/: annotated.tex  class_test.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  test_8h.tex
labs/doxygen/source/: test.h
labs/lab1/: CMakeLists.txt
labs/lab1/examples/: main.cpp
labs/lab1/sources/: print_hello_world.cpp
labs/test_catch/: CMakeLists.txt
labs/test_catch/examples/: main.cpp
labs/test_catch/include/: check.h
labs/test_catch/sources/: check.cpp
labs/test_catch/tests/: main.cpp
